[GUI] Fixing long names overflow in advanced search results. Changed the general layout to flexbox.

--- a/xmd/style/jquery/ximdex_theme/widgets/searchpanel/searchpanel.scss
+++ b/xmd/style/jquery/ximdex_theme/widgets/searchpanel/searchpanel.scss
@@ -59,6 +59,7 @@
 		>a{
 			margin: 0;
 			right: 20px;
+			z-index: 3;
 		}
 
 		.ui-dialog .ui-dialog-titlebar-close{
@@ -191,10 +192,20 @@
 		padding: 2em 1.5em;
 		position: relative;
 		margin-left: 34%;
-		.xim-listview-table, tr, tbody{
+		.xim-listview-table, tbody{
 			float: left;
 			width: 100%;
 			display: block;
+		}
+
+		tr{
+			 display: -webkit-box;
+			  display: -webkit-flex;
+			  display: -moz-box;
+			  display: -ms-flexbox;
+			  display: flex;
+			  flex-wrap: wrap;
+			  justify-content: space-between;
 		}
 		
 		.t_fixed_header{
@@ -248,13 +259,12 @@
 			}
 			td{
 				font-size: 1.2em;
-				float: left;
+
+				
 				
 				&:first-child{
-					margin-left: 1em;
-					position: absolute;
-					width: 100%;
-					height: 100%;
+					order: 1;
+					padding: 0 .5em 0 1em;
 
 					.xim-actions-dropdown{
 						position: absolute;
@@ -262,39 +272,13 @@
 						height: 100%;
 						left: 0;
 						top: 0;
-
-
-					}
-					
+					}	
 				}
 
-				&:nth-child(2){
-					position: absolute;
-					text-align: right !important;
-					left: 29.5em;
-				}
 				&:nth-child(3){
-					margin-left: 3.1em;
-				}
-
-				&:nth-child(4){
-					color: $c-mainlight;
-					margin-top: -.1em;
-					font-weight: bold;
-					&::before{
-						content: "[";
-					}
-					&::after{
-						content: "]";
-						
-					}
-				}
-
-				&:nth-child(5){
-					clear: left;
-					margin-left: 3.1em;
-					width: 87% !important;
-
+					order:2;
+					flex-basis: 35%;
+					white-space: nowrap;
 					span{
 					position: relative;
 						
@@ -302,7 +286,6 @@
 					display: block;
 					overflow: hidden;							
 					width: 100%;
-					padding-right:13.5em;
 
 						
 					}
@@ -347,7 +330,116 @@
 				            transition: all .2s;													
 						opacity: 0;
 
-					}			
+					}	
+				}
+				&:nth-child(4){
+					order:3;
+					flex-basis: calc(31% - 1.5em);
+					color: $c-mainlight;
+					font-weight: bold;
+					&::before{
+						content: "[";
+					}
+					&::after{
+						content: "]";
+						
+					}
+				}
+				&:nth-child(6){
+					order:4;
+					flex-basis: 15%;
+				}
+				&:nth-child(2){
+					order:5;
+					flex-basis: 15%;
+				}
+				&:nth-child(5){
+					order:6;
+					padding-left: 2.8em;
+					flex-basis: 66%;
+					white-space: nowrap;
+					span{
+					position: relative;
+						
+					text-overflow: ellipsis;
+					display: block;
+					overflow: hidden;							
+					width: 100%;
+
+						
+					}
+
+					&:hover::before, &:hover::after{
+						opacity: 1;
+						 -webkit-transition: all .5s .3s;
+				            -moz-transition: all .5s .3s;
+				            -ms-transition: all .5s .3s;
+				            -o-transition: all .5s .3s;
+				            transition: all .5s .3s;							
+ 												
+
+					}
+					&:hover::before{
+						height: auto;
+						overflow: visible;
+						padding: .5em 1em;
+					}
+
+					&::before{
+						content: attr(data-tooltip);
+						@extend %tooltip;	
+						top: 3.7em;
+						margin-left: -1em;
+						-webkit-transition: all .2s;
+				            -moz-transition: all .2s;
+				            -ms-transition: all .2s;
+				            -o-transition: all .2s;
+				            transition: all .2s;		
+
+					}		
+
+					&::after{
+						@include triangle(top, rgba(35,35,35,.8), .5em);
+						margin-bottom: -.9em;
+						top: 3.8em;
+						-webkit-transition: all .2s;
+				            -moz-transition: all .2s;
+				            -ms-transition: all .2s;
+				            -o-transition: all .2s;
+				            transition: all .2s;													
+						opacity: 0;
+
+					}	
+				}
+				&:nth-child(8){
+					order:7;
+					margin-left: -1.6em;
+				}
+				&:nth-child(7){
+					order:8;
+					padding-right: 1.8em;
+					color: darken($c_mainlight, 5%);
+					font-weight: bold;
+				}
+			}
+
+				/*t&:nth-child(2){
+					position: absolute;
+					text-align: right !important;
+					left: 29.5em;
+				}
+				
+
+				&:nth-child(4){
+					
+				}
+
+				&:nth-child(5){
+					clear: left;
+					margin-left: 3.1em;
+					width: 87% !important;
+
+							
 				}
 
 				&:nth-child(6){
@@ -360,8 +452,7 @@
 					position: absolute;
 					left:29.5em;
 					top: 2.18em;
-					color: darken($c_mainlight, 5%);
-					font-weight: bold;
+					
 					text-align: right !important;
 				}
 				&:last-child{
@@ -370,7 +461,7 @@
 					margin-left: 59%;
 
 				}
-			}
+			}*/
 
 			.xim-listview-icon{
 				height: 1.5em;
@@ -391,6 +482,8 @@
 	.ui-widget-content{
 		border: none;
 		background: none;
+		width: auto !important;
+
 	}
 
 
@@ -470,6 +563,7 @@
 
 
 .xim-listview-table-container{
+	margin: 1.5em 0;
 	>div{
 		width: 100% !important;
 	}
